# RefactorCI

./: .coverage  flake8_report.txt  test_results.txt
.github/workflows/: python-app.yml
RefactorCode/: pyproject.toml
RefactorCode/CoverageReport/: coverage.xml
RefactorCode/refactorcode/: assignment.py
RefactorCode/tests/: test_doubly_linked_list.py
