[tool.poetry]
name = "refactorcode"
version = "0.1.0"
description = ""
authors = ["Joseph Porrino <114635385+BabyKangaroo117@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.4.3"
flake8 = "^6.1.0"
coverage = "^7.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
